deployments/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app.kubernetes.io/name: go-angular-spa-template
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: go-angular-spa-template
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
